--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,18 @@ dependencies {
     implementation 'org.springframework:spring-web:6.1.6'
     implementation 'org.springframework.boot:spring-boot-starter-security:3.2.5'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+
+
     compileOnly 'org.projectlombok:lombok'
+    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.1.0-M2'
+
     runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
