--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,24 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
+//
+apply plugin: 'maven-publish'
+publishing {
+    publications {
+        customLibrary(MavenPublication) {
+            from components.java
+        }
+    }
+
+    repositories {
+        maven {
+            name = 'sampleRepo'
+            url = layout.buildDirectory.dir("repo")
+        }
+    }
+}
+gradle publish
+//
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
