--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=GestionClient
-spring.datasource.url = jdbc:mysql://localhost/GestionClient?createDatabaseIfNotExist=true
-spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.url = jdbc:mysql://sql8.freemysqlhosting.net/sql8701867?createDatabaseIfNotExist=true
+spring.datasource.username = sql8701867
+spring.datasource.password = BrxPW6hLwT
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
