--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url = jdbc:mysql://sql8.freemysqlhosting.net/sql8701867?create
 spring.datasource.username = sql8701867
 spring.datasource.password = BrxPW6hLwT
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
