--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=GestionClient
-spring.datasource.url = jdbc:mysql://sql8.freemysqlhosting.net/sql8701867?createDatabaseIfNotExist=true
-spring.datasource.username = sql8701867
-spring.datasource.password = BrxPW6hLwT
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/sql8701867?createDatabaseIfNotExist=true
+spring.datasource.username = root
+spring.datasource.password =
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
