--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url = jdbc:mysql://127.0.0.1:3306/sql8701867?createDatabaseIfN
 spring.datasource.username = root
 spring.datasource.password =
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
